--- a/pupil-spa/src/app/login/login.component.html
+++ b/pupil-spa/src/app/login/login.component.html
@@ -15,14 +15,14 @@
         <p class="lede">
             Enter your school password and pupil PIN, then click <span class="nowrap">‘Sign in’</span>
         </p>
-        <form (ngSubmit)="onSubmit(schoolPin.value, pupilPin.value)" autocomplete="off" autocapitalize="none">
+        <form (ngSubmit)="onSubmit(schoolPin.value, pupilPin.value)" autocomplete="off">
             <div class="form-group">
                 <label for="school-pin" class="form-label-bold"> School password </label>
-                <input #schoolPin id="school-pin" class="form-control" spellcheck="false" autocorrect="off">
+                <input #schoolPin id="school-pin" class="form-control" autocomplete="off" spellcheck="false" autocorrect="off" autocapitalize="none">
             </div>
             <div class="form-group">
                 <label for="pupil-pin" class="form-label-bold"> Pupil PIN </label>
-                <input #pupilPin id="pupil-pin" class="form-control" spellcheck="false" autocorrect="off">
+                <input #pupilPin id="pupil-pin" class="form-control" autocomplete="off" spellcheck="false" autocorrect="off" type="number">
             </div>
             <div class="form-group">
                 <p>
