21370 - Added 'selected' state for buttons after page is read out

--- a/pupil-spa/src/app/login-success/login-success.component.html
+++ b/pupil-spa/src/app/login-success/login-success.component.html
@@ -14,6 +14,6 @@
     <p class="lede">
       <a routerLink="/sign-out" >This is not me, I will try again</a>
     </p>
-    <button class="button" (click)="onClick()">Next</button>
+    <button id="confirm-identity-button" class="button" (click)="onClick()">Next</button>
   </div>
 </div>
