--- a/pupil-spa/src/app/submission-failed/submission-failed.component.html
+++ b/pupil-spa/src/app/submission-failed/submission-failed.component.html
@@ -6,7 +6,7 @@
     <div class="panel panel-border-wide" tabindex="0">
       Please contact the helpline on {{supportNumber}} for advice on how to upload the check.
     </div>
-    <a routerLink="/check" class="button">
+    <a routerLink="/check" class="button" id="retry-button">
       Retry
     </a>
   </div>
